数据解析加上了中间层

--- a/indoor3D/index.html
+++ b/indoor3D/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- <button id="test" style="position:absolute;top:5px;left:5px;z-index:1001">测试按钮</button> -->
-<button id="popularity" style="position:absolute;top:5px;left:5px;z-index:1001">人气</button>
+<!-- <button id="popularity" style="position:absolute;top:5px;left:5px;z-index:1001">人气</button> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.js"></script>
 <!-- <script src="js/three.min.js"></script> -->
 <script src="js/Detector.js"></script>
