--- a/indoor3D/index.html
+++ b/indoor3D/index.html
@@ -9,6 +9,7 @@
 <!-- <button id="test" style="position:absolute;top:5px;left:5px;z-index:1001">测试按钮</button> -->
 <!-- <button id="popularity" style="position:absolute;top:5px;left:5px;z-index:1001">人气</button> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>  
 <!-- <script src="js/three.min.js"></script> -->
 <script src="js/Detector.js"></script>
 <script src="js/OrbitControls.js"></script>
