修改sprites为perspective相机中的

--- a/indoor3D/indoor.html
+++ b/indoor3D/indoor.html
@@ -22,8 +22,8 @@
 <link href="css/indoor3D.css" rel="stylesheet">
 <!-- <script src="js/loaders/DDSLoader.js"></script>
 <script src="js/loaders/MTLLoader.js"></script>
-<script src="js/loaders/OBJMTLLoader.js"></script> -->
-<script src="js/loaders/shader.js"></script>
+<script src="js/loaders/OBJMTLLoader.js"></script>
+<script src="js/loaders/shader.js"></script> -->
 <script src="js/init.js"></script>
 </body>
 </html>
